Bug 124466 - FILESAVE XLSX Line Chart with changed alignment of data series causes error message
Summary: FILESAVE XLSX Line Chart with changed alignment of data series causes error m...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.3.0
Keywords:
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-04-01 09:31 UTC by NISZ LibreOffice Team
Modified: 2019-04-09 14:05 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Original XLSX file (21.23 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-04-01 09:32 UTC, NISZ LibreOffice Team
Details
Exported XLSX file (17.08 KB, application/vnd.openxmlformats-officedocument.spreadsheetml.sheet)
2019-04-01 09:33 UTC, NISZ LibreOffice Team
Details
Screenshot (114.56 KB, image/png)
2019-04-01 09:33 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-04-01 09:31:23 UTC
Description:
Line Chart in XLSX documents created with Microsoft Excel 2016 causes error message about bad content in Excel when the document is changed and then exported as XLSX in LibreOffice Calc 6.3.0.0.alpha0+ and then opened again in Excel 2016.

Steps to Reproduce:

    1. Create a new document in Microsoft Excel.
    2. Insert a Line Chart.
    3. Change the Align of the last Data Series to Secondary Y axis.
    4. Save the file as XLSX.
    5. Open the same file in LibreOffice Calc.
    6. Change the Align of the middle Data Series to Secondary Y axis.
    7. Save the file as XLSX.
    8. Open it again in Microsoft Excel.
    9. Open the attached screenshot.
    10. Notice the popup error message about bad content.

Actual Results:
There is an error message about bad content when the document is opened in Excel 2016.

Expected Results:
The exported XLSX should be valid both in LibreOffice Calc and Microsoft Excel 2016.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.3.0.0.alpha0+
Build ID: ade1df0948563b532a5d293c31d46a4f042559ee
CPU threads: 4; OS: Windows 10.0; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-04-01 09:32:49 UTC
Created attachment 150444 [details]
Original XLSX file
Comment 2 NISZ LibreOffice Team 2019-04-01 09:33:28 UTC
Created attachment 150445 [details]
Exported XLSX file
Comment 3 NISZ LibreOffice Team 2019-04-01 09:33:49 UTC
Created attachment 150446 [details]
Screenshot
Comment 4 Balázs Varga 2019-04-01 13:00:08 UTC
Confirmed

with

Version: 6.3.0.0.alpha0+
Build ID: 210ed60686009128bc772af6ba41650ad17d40e1
CPU threads: 8; OS: Windows 10.0; UI render: default; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 5 Commit Notification 2019-04-08 13:31:01 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/a3881a66b8ffda4a8a89ecfc4347555e34193665%5E%21

tdf#124466 XLSX: fix broken export by removing chart type data redundancy

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.