tdf#124466 XLSX export: fix OOXML error at charts

During the export the splitDataSeriesByAxis (chartexport.cxx:1587)
cannot handle if the dataseries was already splitted from
an earlier save and splitted again and caused an OOXML
error in MS Office. In LibreOffice the dataseries was
badly attached. The main problem was in the import part,
where the LibreOffice unnecessarily created the same
chart type twice. Lets create just one charttype at the import
if they are contain in the same type and then just split once
during the export.

Change-Id: If951feaca3cb3b5df7718e9d7bfd59620ef3c4d3